# CandyBot

./: .gitignore  README.md  Roles.md  System Architecture & Materials.md
3D Models/: adapter ramp to sg90.stl  assembly dispenser (non-printable).stl  back skin.stl  basic big support.stl  bridge floor.stl  bridge leg.stl  cam support.stl  crank limiter.stl  crank.stl  dispenser sg support.stl  dispenser skeleton.stl  double leg big support.stl  front skin.stl  funnel roof.stl  funnel top support.stl  funnel.stl  inverted dispenser sg support.stl  inverted dispenser skeleton.stl  left skin.stl  main 360 servo support.stl  main 4-hole disc.stl  main base ramp.stl  main base.stl  main disc.stl  main ramp.stl  ramp sg support.stl  ramp support.stl  right skin.stl  roof.stl  rotative disc dispenser.stl
Api/: Dockerfile  config.py  pyproject.toml
Api/services/: llm_client.py
BotSoftware/: main.py
BotSoftware/VC/: camera_stream.py  color_centre.py  color_features.py  detectar_colors.py  detectar_colors_rpicam.py  readme.md
BotSoftware/config/: servo_config.py
BotSoftware/controllers/: candy_controller.py  crank_controller.py  display_controller.py  reload_controller.py  servo_controller.py  vision_controller.py
BotSoftware/models/: candy_stock.py
BotSoftware/services/: api_client.py
HW tests/: analizar_dataset.py  calibrar_colores.py  control_servo_basic.py  debug_pass.py  speech_to_text.py  test_ordenar.py  test_palanca.py  test_pantalla.py  ver_colores.py
Hardware/: control_pantallaLCD_basic.py
Software/: control_servo_basic.py  main.py
(+23 files in other folders)
