[tool.poetry]
name = "candybot-api"
version = "0.1.0"
description = "CandyBot FastAPI service"
authors = ["CandyBot Team"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "0.136.1"
uvicorn = "0.46.0"
httpx = "0.28.1"
pydantic = "2.13.4"
google-cloud-speech = "2.39.0"
python-multipart = "^0.0.27"
audioop-lts = "^0.2.2"
vertexai = "^1.71.1"
python-dotenv = "^1.2.2"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
